[package]
name = "klandmigrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
config = "0.11"
rusqlite = { version = "0.26.1", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
mysql = "21"

# NOTE: rusqlite needs libsqlite3-dev as well (linker)
